--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script src="%PUBLIC_URL%/js/ammap.js"></script>
+    <script src="%PUBLIC_URL%/js/ammap-maps-worldLow.js"></script>
+    <script src="%PUBLIC_URL%/js/ammap-theme-dark.js"></script>
+    <script src="%PUBLIC_URL%/js/ammap-theme-light.js"></script>
     <title>React App</title>
   </head>
   <body>
